Frontend:DetailedRecipe with instruction steps

--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -2,7 +2,7 @@
 
 nav {
   height: 50px;
-  background-color: $darkGreen;
+  background-color: $primary;
   display: flex;
   flex-direction: row-reverse;
 
