--- a/frontend/src/components/RecipeBulkCard/styles.scss
+++ b/frontend/src/components/RecipeBulkCard/styles.scss
@@ -1,11 +1,40 @@
-.recipeBulkCardSection {
-  margin: 10px;
-  border: 1px solid lightgray;
-  box-shadow: 0 4px 10px -2px lightgray;
+@import '../../ui';
 
+.recipeBulkCardSection {
+  background-color: $light;
   .recipeImg {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
+  }
+
+  .recipeInfo {
+    .recipeTitle {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      height: 75px;
+
+      padding: 5px 10px;
+      text-align: center;
+
+      border: 1px solid lightgray;
+      border-top: none;
+    }
+
+    .row {
+      margin: auto;
+      .recipeFeature {
+        padding: 10px 0;
+        text-align: center;
+
+        font-style: italic;
+        font-weight: bolder;
+        font-size: 13px;
+
+        border-bottom: 1px solid lightgray;
+      }
+    }
   }
 }
