Frontend: search results css

--- a/frontend/src/components/BasicRecipe/styles.scss
+++ b/frontend/src/components/BasicRecipe/styles.scss
@@ -1,7 +1,82 @@
+@import '../../ui';
+
 .basicRecipeSection {
-  .recipeImg {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+  margin: 10px;
+  border: 1px solid lightgray;
+  box-shadow: 0 4px 10px -2px lightgray;
+  position: relative;
+
+  .infoSection {
+    background-color: $light;
+    .recipeImg {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+    }
+
+    .recipeInfo {
+      .recipeTitle {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        height: 75px;
+
+        padding: 5px 10px;
+        text-align: center;
+
+        border: 1px solid lightgray;
+        border-top: none;
+      }
+
+      .row {
+        margin: auto;
+        .recipeFeature {
+          padding: 10px 0;
+          text-align: center;
+
+          font-style: italic;
+          font-weight: bolder;
+          font-size: 13px;
+
+          border-bottom: 1px solid lightgray;
+        }
+      }
+    }
+  }
+
+  .instructions {
+    height: 40px;
+    font-weight: bold;
+    font-size: 14px;
+    color: $primary;
+    width: 100%;
+  }
+
+  .instructions:hover {
+    background-color: $primary;
+    color: $light;
+    cursor: pointer;
+  }
+
+  .likeRecipe {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    background-color: $light;
+    padding: 4px;
+    padding-right: 0;
+    margin: 0;
+    width: 22px;
+    border-radius: 50%;
+
+    .likeThumbs {
+      color: $primary;
+    }
+
+    .likeThumbs:hover {
+      cursor: pointer;
+    }
   }
 }
