--- a/frontend/src/components/ProfileRecipe/styles.scss
+++ b/frontend/src/components/ProfileRecipe/styles.scss
@@ -55,8 +55,8 @@
 
     background-color: $light;
     padding: 4px;
-    padding-right: 0px;
-    margin: 0px;
+    padding-right: 0;
+    margin: 0;
     width: 22px;
     border-radius: 50%;
 
