--- a/frontend/src/components/AnalyzedInstructionStep/styles.scss
+++ b/frontend/src/components/AnalyzedInstructionStep/styles.scss
@@ -1,3 +1,24 @@
 .analyzedInstructionStepSection {
+  .step {
+    font-weight: bold;
+    font-size: 18px;
+    text-align: center;
+    padding: 10px;
+    border-bottom: 1px solid lightgray;
+  }
 
+  .ingredient {
+    .bold {
+      font-weight: bold;
+    }
+    padding: 10px;
+  }
+
+  .preparation {
+    .bold {
+      font-weight: bold;
+    }
+    padding: 10px;
+    border-bottom: 1px solid lightgray;
+  }
 }
