--- a/frontend/src/components/ProfileRecipe/styles.scss
+++ b/frontend/src/components/ProfileRecipe/styles.scss
@@ -13,8 +13,8 @@
   .infoSection {
     background-color: $light;
     .recipeImg {
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
     }
 
